# equivoc

./: .gitignore  Cargo.toml  Gemfile  README.md  entry.rb  equivoc.rb
equivoc_cli/: Cargo.toml
equivoc_cli/src/: frontend_ir.rs  frontend_to_mir.rs  main.rs
equivoc_engine/: Cargo.toml
equivoc_engine/src/: basic_block_interpreter.rs  lib.rs  lir.rs  mir.rs  mir2lir_translator.rs  mir_optimizer.rs
equivoc_engine/src/mir_optimizer/analyses/: def_use.rs  effect.rs  loop_info.rs  mod.rs
equivoc_engine/src/mir_optimizer/transforms/: mod.rs  recompute_effect_summaries.rs  record_analysis_summary.rs
equivoc_frontend_rb/: control.rb  instruction.rb  instruction_collector.rb  lib.rb  variable.rb
