[workspace]
resolver = "2"
members = [
    "equivoc_cli",
    "equivoc_engine",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["White-Green"]

[workspace.dependencies]
equivoc_engine = { path = "equivoc_engine" }

clap = { version = "4.5.34", features = ["derive"] }
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
